fix:event-faqs
