# server/src/types.ts
@@ -1,4 +1,4 @@
-import { type Document } from "mongoose";
+import { type Document } from 'mongoose'
 
 export interface DatabaseUser extends Document {
   email: string
@@ -30,45 +30,50 @@ export interface IUser {
 }
 
 export interface IReview {
-  score: number;
-  text: string;
-  eventId?: string;
-  organizerId?: string;
+  score: number
+  text: string
+  eventId?: string
+  organizerId?: string
 }
 
 export enum Category {
-  Gastronómicos = "Gastronómicos",
-  Culturales = "Culturales",
-  Deportivos = "Deportivos",
-  Educativos = "Educativos",
-  Sociales = "Sociales y de entretenimiento",
-  Beneficios = "Beneficios y causas benéficas",
-  Familiares = "Familiares y niños",
-  Moda = "Moda y belleza",
-  Conferencias = "Conferencias y convenciones",
+  Gastronómicos = 'Gastronómicos',
+  Culturales = 'Culturales',
+  Deportivos = 'Deportivos',
+  Educativos = 'Educativos',
+  Sociales = 'Sociales y de entretenimiento',
+  Beneficios = 'Beneficios y causas benéficas',
+  Familiares = 'Familiares y niños',
+  Moda = 'Moda y belleza',
+  Conferencias = 'Conferencias y convenciones',
 }
 
 export enum EventType {
-  Interior = "Interior",
-  Exterior = "Exterior",
-  Virtual = "Virtual",
+  Interior = 'Interior',
+  Exterior = 'Exterior',
+  Virtual = 'Virtual',
 }
 
 export interface IEvent {
-  imgUrls: string[];
-  description: string;
-  title: string;
-  place: string;
-  reviews?: IReview[];
-  people?: IUser[];
-  schedule: number;
-  duration: number;
-  category: Category;
-  price: number;
-  link: string;
-  minAge: number;
-  type: EventType;
-  creator: string;
+  imgUrls: string[]
+  description: string
+  title: string
+  place: string
+  reviews?: IReview[]
+  people?: IUser[]
+  schedule: number
+  duration: number
+  category: Category
+  price: number
+  link: string
+  minAge: number
+  type: EventType
+  creator: string
+  days: string[]
+  faqs: Array<{
+    question: string
+    answer: string
+  }>
 }
 
 export enum Barrio {
